--- a/webpage-time-tracker/package.json
+++ b/webpage-time-tracker/package.json
@@ -34,5 +34,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-app-rewired": "^2.2.1",
+    "webpack": "^5.89.0"
   }
 }
