--- a/webpage-time-tracker/public/manifest.json
+++ b/webpage-time-tracker/public/manifest.json
@@ -1,11 +1,20 @@
 {
   "name": "Webpage Time Tracker",
   "version": "1.0.0",
-  "description": "latest covid data of UK",
+  "description": "Track the time spent on webpages",
   "manifest_version": 3,
-  "author": "Sampurna Chapagain",
+  "author": "Fikremariam Anteneh Asegie",
+  "browser_action": {
+    "default_popup": "index.html"
+  },
   "action": {
     "default_popup": "index.html",
-    "default_title": "Latest Covid Report"
+    "default_title": "Webpage Time Tracker"
+  },
+  "permissions": ["storage", "scripting", "activeTab", "background", "tabs"],
+  "host_permissions": ["http://*/*", "https://*/*"],
+  "background": {
+    "service_worker": "background.js",
+    "type": "module"
   }
 }
